# enkit

./: go.mod  go.sum  matrix.txt
bazel/init/: stage_1.bzl
bestie/proto/: test_metrics.proto
lib/bazel/: affected_targets.go  workspace.go
scripts/: BUILD.bazel  bkup  gee  gee.bats  gee_test.sh  geet.py
tools/bzldoc/: BUILD.bazel  bzl2yaml_lib.py  bzldoc.py
tools/codegen/: BUILD.bazel  codegen.py  codegen_lib.py
tools/codegen/tests/: BUILD.bazel  missing_data.template
tools/fix_format/: BUILD.bazel  README.md  fix_format.py  fix_format.version.bzl  fix_format_test.py  main.py  test_fix_format.sh
tools/fix_format/testdata/: README.md  base.cc  base.h  foo.py  lib.rs  py.bzl  sub0.sv
tools/mdfmt/: BUILD.bazel  mdfmt.py  mdfmt_lib.py
