load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@python_dependencies//:requirements.bzl", "requirement")
load(
    "//bazel/utils:diff_test.bzl",
    "diff_test",
)
load(
    "//tools/bzldoc:bzldoc.bzl",
    "bzldoc",
)

bzl_library(
    name = "bzldoc_bzl",
    srcs = ["bzldoc.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        # "//codegen:codegen_bzl",
    ],
)

py_library(
    name = "bzl2yaml_lib",
    srcs = ["bzl2yaml_lib.py"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
        requirement("pyyaml"),
    ],
)

py_binary(
    name = "bzl2yaml",
    srcs = ["bzl2yaml.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        ":bzl2yaml_lib",
        requirement("absl-py"),
    ],
)

py_binary(
    name = "bzldoc",
    srcs = ["bzldoc.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        ":bzl2yaml_lib",
        "//tools/codegen:codegen_lib",
        "//tools/mdfmt:mdfmt_lib",
        requirement("absl-py"),
    ],
)

bzldoc(
    name = "codegen",
    src = "testdata/codegen.bzl",
)

exports_files(
    ["md.template"],
    visibility = ["//visibility:public"],
)

diff_test(
    name = "codegen.yaml-diff_test",
    actual = "codegen.yaml",
    expected = "testdata/codegen.yaml",
)

diff_test(
    name = "codegen.md-diff_test",
    actual = "codegen.md",
    expected = "testdata/codegen.md",
)
